apps/api/plane/utils/pql/generated/PQLParser.py
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PQLParser ( Parser ):

    grammarFileName = "PQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'and'", "'or'", "'not'", "'in'", "'is'", 
                     "'null'", "'cf'", "'currentuser'", "'now'", "'childof'", 
                     "'descendantof'", "'!='", "'>='", "'<='", "'='", "'>'", 
                     "'<'", "'~'", "'('", "')'", "'['", "']'", "','", "'+'", 
                     "'-'" ]

    symbolicNames = [ "<INVALID>", "AND", "OR", "NOT", "IN", "IS", "NULL", 
                      "CF", "CURRENTUSER", "NOW", "CHILDOF", "DESCENDANTOF", 
                      "NEQ", "GTE", "LTE", "EQ", "GT", "LT", "TILDE", "LPAREN", 
                      "RPAREN", "LBRACKET", "RBRACKET", "COMMA", "PLUS", 
                      "MINUS", "STRING", "DURATION", "NUMBER", "IDENT", 
                      "WS" ]

    RULE_query = 0
    RULE_expression = 1
    RULE_orExpr = 2
    RULE_andExpr = 3
    RULE_notExpr = 4
    RULE_primary = 5
    RULE_predicate = 6
    RULE_fieldName = 7
    RULE_customPropertyPredicate = 8
    RULE_propertyReference = 9
    RULE_conditionFunction = 10
    RULE_functionName = 11
    RULE_callArguments = 12
    RULE_comparison = 13
    RULE_operator = 14
    RULE_valueList = 15
    RULE_arguments = 16
    RULE_value = 17
    RULE_valueFunction = 18
    RULE_durationOffset = 19
    RULE_sign = 20

    ruleNames =  [ "query", "expression", "orExpr", "andExpr", "notExpr", 
                   "primary", "predicate", "fieldName", "customPropertyPredicate", 
                   "propertyReference", "conditionFunction", "functionName", 
                   "callArguments", "comparison", "operator", "valueList", 
                   "arguments", "value", "valueFunction", "durationOffset", 
                   "sign" ]

    EOF = Token.EOF
    AND=1
    OR=2
    NOT=3
    IN=4
    IS=5
    NULL=6
    CF=7
    CURRENTUSER=8
    NOW=9
    CHILDOF=10
    DESCENDANTOF=11
    NEQ=12
    GTE=13
    LTE=14
    EQ=15
    GT=16
    LT=17
    TILDE=18
    LPAREN=19
    RPAREN=20
    LBRACKET=21
    RBRACKET=22
    COMMA=23
    PLUS=24
    MINUS=25
    STRING=26
    DURATION=27
    NUMBER=28
    IDENT=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PQLParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(PQLParser.EOF, 0)

        def getRuleIndex(self):
            return PQLParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = PQLParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.expression()
            self.state = 43
            self.match(PQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(PQLParser.OrExprContext,0)


        def getRuleIndex(self):
            return PQLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = PQLParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PQLParser.AndExprContext)
            else:
                return self.getTypedRuleContext(PQLParser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(PQLParser.OR)
            else:
                return self.getToken(PQLParser.OR, i)

        def getRuleIndex(self):
            return PQLParser.RULE_orExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)




    def orExpr(self):

        localctx = PQLParser.OrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_orExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.andExpr()
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 48
                self.match(PQLParser.OR)
                self.state = 49
                self.andExpr()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PQLParser.NotExprContext)
            else:
                return self.getTypedRuleContext(PQLParser.NotExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(PQLParser.AND)
            else:
                return self.getToken(PQLParser.AND, i)

        def getRuleIndex(self):
            return PQLParser.RULE_andExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)




    def andExpr(self):

        localctx = PQLParser.AndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_andExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.notExpr()
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 56
                self.match(PQLParser.AND)
                self.state = 57
                self.notExpr()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(PQLParser.NOT, 0)

        def notExpr(self):
            return self.getTypedRuleContext(PQLParser.NotExprContext,0)


        def primary(self):
            return self.getTypedRuleContext(PQLParser.PrimaryContext,0)


        def getRuleIndex(self):
            return PQLParser.RULE_notExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpr" ):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)




    def notExpr(self):

        localctx = PQLParser.NotExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_notExpr)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.match(PQLParser.NOT)
                self.state = 64
                self.notExpr()
                pass
            elif token in [7, 8, 9, 10, 11, 19, 29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.primary()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PQLParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(PQLParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(PQLParser.RPAREN, 0)

        def predicate(self):
            return self.getTypedRuleContext(PQLParser.PredicateContext,0)


        def customPropertyPredicate(self):
            return self.getTypedRuleContext(PQLParser.CustomPropertyPredicateContext,0)


        def getRuleIndex(self):
            return PQLParser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimary" ):
                return visitor.visitPrimary(self)
            else:
                return visitor.visitChildren(self)




    def primary(self):

        localctx = PQLParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_primary)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(PQLParser.LPAREN)
                self.state = 69
                self.expression()
                self.state = 70
                self.match(PQLParser.RPAREN)
                pass
            elif token in [8, 9, 10, 11, 29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.predicate()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.customPropertyPredicate()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldName(self):
            return self.getTypedRuleContext(PQLParser.FieldNameContext,0)


        def comparison(self):
            return self.getTypedRuleContext(PQLParser.ComparisonContext,0)


        def conditionFunction(self):
            return self.getTypedRuleContext(PQLParser.ConditionFunctionContext,0)


        def getRuleIndex(self):
            return PQLParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)




    def predicate(self):

        localctx = PQLParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_predicate)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.fieldName()
                self.state = 77
                self.comparison()
                pass
            elif token in [8, 9, 10, 11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.conditionFunction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(PQLParser.IDENT, 0)

        def getRuleIndex(self):
            return PQLParser.RULE_fieldName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldName" ):
                listener.enterFieldName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldName" ):
                listener.exitFieldName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldName" ):
                return visitor.visitFieldName(self)
            else:
                return visitor.visitChildren(self)




    def fieldName(self):

        localctx = PQLParser.FieldNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fieldName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(PQLParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CustomPropertyPredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CF(self):
            return self.getToken(PQLParser.CF, 0)

        def LBRACKET(self):
            return self.getToken(PQLParser.LBRACKET, 0)

        def propertyReference(self):
            return self.getTypedRuleContext(PQLParser.PropertyReferenceContext,0)


        def RBRACKET(self):
            return self.getToken(PQLParser.RBRACKET, 0)

        def comparison(self):
            return self.getTypedRuleContext(PQLParser.ComparisonContext,0)


        def getRuleIndex(self):
            return PQLParser.RULE_customPropertyPredicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustomPropertyPredicate" ):
                listener.enterCustomPropertyPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustomPropertyPredicate" ):
                listener.exitCustomPropertyPredicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCustomPropertyPredicate" ):
                return visitor.visitCustomPropertyPredicate(self)
            else:
                return visitor.visitChildren(self)




    def customPropertyPredicate(self):

        localctx = PQLParser.CustomPropertyPredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_customPropertyPredicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(PQLParser.CF)
            self.state = 85
            self.match(PQLParser.LBRACKET)
            self.state = 86
            self.propertyReference()
            self.state = 87
            self.match(PQLParser.RBRACKET)
            self.state = 88
            self.comparison()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(PQLParser.STRING, 0)

        def getRuleIndex(self):
            return PQLParser.RULE_propertyReference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyReference" ):
                listener.enterPropertyReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyReference" ):
                listener.exitPropertyReference(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyReference" ):
                return visitor.visitPropertyReference(self)
            else:
                return visitor.visitChildren(self)




    def propertyReference(self):

        localctx = PQLParser.PropertyReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_propertyReference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(PQLParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionName(self):
            return self.getTypedRuleContext(PQLParser.FunctionNameContext,0)


        def callArguments(self):
            return self.getTypedRuleContext(PQLParser.CallArgumentsContext,0)


        def getRuleIndex(self):
            return PQLParser.RULE_conditionFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionFunction" ):
                listener.enterConditionFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionFunction" ):
                listener.exitConditionFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionFunction" ):
                return visitor.visitConditionFunction(self)
            else:
                return visitor.visitChildren(self)




    def conditionFunction(self):

        localctx = PQLParser.ConditionFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_conditionFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.functionName()
            self.state = 93
            self.callArguments()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHILDOF(self):
            return self.getToken(PQLParser.CHILDOF, 0)

        def DESCENDANTOF(self):
            return self.getToken(PQLParser.DESCENDANTOF, 0)

        def CURRENTUSER(self):
            return self.getToken(PQLParser.CURRENTUSER, 0)

        def NOW(self):
            return self.getToken(PQLParser.NOW, 0)

        def getRuleIndex(self):
            return PQLParser.RULE_functionName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionName" ):
                listener.enterFunctionName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionName" ):
                listener.exitFunctionName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionName" ):
                return visitor.visitFunctionName(self)
            else:
                return visitor.visitChildren(self)




    def functionName(self):

        localctx = PQLParser.FunctionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3840) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PQLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PQLParser.RPAREN, 0)

        def arguments(self):
            return self.getTypedRuleContext(PQLParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return PQLParser.RULE_callArguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallArguments" ):
                listener.enterCallArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallArguments" ):
                listener.exitCallArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallArguments" ):
                return visitor.visitCallArguments(self)
            else:
                return visitor.visitChildren(self)




    def callArguments(self):

        localctx = PQLParser.CallArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_callArguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(PQLParser.LPAREN)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 905973504) != 0):
                self.state = 98
                self.arguments()


            self.state = 101
            self.match(PQLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PQLParser.RULE_comparison

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CompareOperatorContext(ComparisonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PQLParser.ComparisonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operator(self):
            return self.getTypedRuleContext(PQLParser.OperatorContext,0)

        def value(self):
            return self.getTypedRuleContext(PQLParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompareOperator" ):
                listener.enterCompareOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompareOperator" ):
                listener.exitCompareOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompareOperator" ):
                return visitor.visitCompareOperator(self)
            else:
                return visitor.visitChildren(self)


    class InListContext(ComparisonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PQLParser.ComparisonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IN(self):
            return self.getToken(PQLParser.IN, 0)
        def valueList(self):
            return self.getTypedRuleContext(PQLParser.ValueListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInList" ):
                listener.enterInList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInList" ):
                listener.exitInList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInList" ):
                return visitor.visitInList(self)
            else:
                return visitor.visitChildren(self)


    class NotInListContext(ComparisonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PQLParser.ComparisonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(PQLParser.NOT, 0)
        def IN(self):
            return self.getToken(PQLParser.IN, 0)
        def valueList(self):
            return self.getTypedRuleContext(PQLParser.ValueListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotInList" ):
                listener.enterNotInList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotInList" ):
                listener.exitNotInList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotInList" ):
                return visitor.visitNotInList(self)
            else:
                return visitor.visitChildren(self)


    class IsNullContext(ComparisonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PQLParser.ComparisonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IS(self):
            return self.getToken(PQLParser.IS, 0)
        def NULL(self):
            return self.getToken(PQLParser.NULL, 0)
        def NOT(self):
            return self.getToken(PQLParser.NOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIsNull" ):
                listener.enterIsNull(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIsNull" ):
                listener.exitIsNull(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIsNull" ):
                return visitor.visitIsNull(self)
            else:
                return visitor.visitChildren(self)



    def comparison(self):

        localctx = PQLParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 14, 15, 16, 17, 18]:
                localctx = PQLParser.CompareOperatorContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.operator()
                self.state = 104
                self.value()
                pass
            elif token in [4]:
                localctx = PQLParser.InListContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(PQLParser.IN)
                self.state = 107
                self.valueList()
                pass
            elif token in [3]:
                localctx = PQLParser.NotInListContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(PQLParser.NOT)
                self.state = 109
                self.match(PQLParser.IN)
                self.state = 110
                self.valueList()
                pass
            elif token in [5]:
                localctx = PQLParser.IsNullContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.match(PQLParser.IS)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 112
                    self.match(PQLParser.NOT)


                self.state = 115
                self.match(PQLParser.NULL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(PQLParser.EQ, 0)

        def NEQ(self):
            return self.getToken(PQLParser.NEQ, 0)

        def GT(self):
            return self.getToken(PQLParser.GT, 0)

        def GTE(self):
            return self.getToken(PQLParser.GTE, 0)

        def LT(self):
            return self.getToken(PQLParser.LT, 0)

        def LTE(self):
            return self.getToken(PQLParser.LTE, 0)

        def TILDE(self):
            return self.getToken(PQLParser.TILDE, 0)

        def getRuleIndex(self):
            return PQLParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):
